@@ -16,6 +16,7 @@
   * SheldonClient.delete_edge ( Use SheldonClient.delete )
   * SheldonClient.edge? ( Use SheldonClient.connection(from:12, to:14, type: :like )
   * SheldonClient.edge  ( Use SheldonClient.connection(123) )
+  * SheldonClient.facebook_item( '123' ) ( Use SheldonClient.search( { facebook_ids: "123" })
 
 
 
